--- a/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
@@ -63,7 +63,13 @@
                     </ui:insert>
                 </footer>
             </div>
-            <p:dialog widgetVar="loadingDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
+            <p:dialog widgetVar="loadingDialog"
+                      id="loadingDialog"
+                      modal="true"
+                      draggable="false"
+                      closable="false"
+                      resizable="false"
+                      showHeader="false">
                 <p:graphicImage id="loading" alt="loading" value="/pages/images/ajax-loader.gif"/>
             </p:dialog>
             <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" styleClass="confirm-delete" id="deleteConfirmDialog">
