--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/metadata.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/metadata.xhtml
@@ -173,6 +173,7 @@
                   resizable="false"
                   widgetVar="dialogAddPerson"
                   modal="true"
+                  showHeader="false"
                   appendTo="@(body)">
             <h:form id="dialogAddPersonForm">
 
