--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/changePasswordPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/changePasswordPopup.xhtml
@@ -21,6 +21,7 @@
                   header="#{msgs.passwordChange}"
                   width="400px"
                   modal="true"
+                  showHeader="false"
                   dynamic="true">
             <h:form id="changePasswordForm">
                 <p:panelGrid id="passwordGrid" columns="1" layout="grid">
