--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/batchProperties/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/batchProperties/processList.xhtml
@@ -43,19 +43,22 @@
                 <h:outputText value="#{property.title}"/>
             </p:column>
             <p:column headerText="#{msgs.value}">
-                <h:outputText value="#{property.value}" rendered="#{property.type.name ne 'link'}"/>
+                <h:outputText value="#{property.value}" rendered="#{property.dataType.name ne 'link'}"/>
                 <h:outputLink title="#{property.value}" value="#{property.value}"
-                              rendered="#{property.type.name eq 'link'}"/>
+                              rendered="#{property.dataType.name eq 'link'}"/>
             </p:column>
             <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
-                <p:commandLink id="editProperty" title="#{msgs.edit}"
+                <p:commandLink id="editProperty"
+                               title="#{msgs.edit}"
                                oncomplete="PF('editPropertyDialog').show()"
                                update="@(.editDialog)">
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:setPropertyActionListener target="#{BatchForm.batchHelper.property}" value="#{property}"/>
                 </p:commandLink>
-                <p:commandLink id="deleteProperty" title="#{msgs.delete}"
-                               oncomplete="PF('deletePropertyDialog').show()" update="@(.editDialog)">
+                <p:commandLink id="deleteProperty"
+                               title="#{msgs.delete}"
+                               oncomplete="PF('deletePropertyDialog').show()"
+                               update="@(.editDialog)">
                     <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                     <f:setPropertyActionListener target="#{BatchForm.batchHelper.property}" value="#{property}"/>
                 </p:commandLink>
