--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/dialogs/addDocStrucType.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/dialogs/addDocStrucType.xhtml
@@ -15,94 +15,129 @@
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui"
->
+    xmlns:p="http://primefaces.org/ui">
 
-    <p:dialog id="dialogAddDocStrucTypeId" header="#{msgs.neuesStrukturelement}" resizable="false"
-              widgetVar="dialogAddDocStrucType" height="400" modal="true"
+    <p:dialog id="dialogAddDocStrucTypeId"
+              resizable="false"
+              widgetVar="dialogAddDocStrucType"
+              width="480px"
+              modal="true"
+              showHeader="false"
               appendTo="@(body)">
+        <h3>#{msgs.neuesStrukturelement}</h3>
         <h:form id="dialogAddDocStrucTypeForm">
 
-            <h:panelGrid columns="2">
-                <h:outputLabel value="#{msgs.position}:" for="docStructPositionSelection"/>
-                <p:selectOneMenu id="docStructPositionSelection" value="#{MetadataProcessor.positionOfNewDocStrucElement}" style="width: 180px">
-                    <!--TODO check addable types-->
-                    <f:selectItems value="#{MetadataProcessor.positionsOfNewDocStrucElement}" var="positionSelection"
-                                   itemValue="#{positionSelection}" itemLabel="#{positionSelection.label}"/>
-                    <p:ajax update="docStructAddTypeSelection"/>
-                </p:selectOneMenu>
+            <h:panelGroup layout="block"
+                          styleClass="dialogFieldWrapper">
+                <h:panelGrid columns="2">
+                    <h:outputLabel value="#{msgs.position}:"
+                                   for="docStructPositionSelection"/>
+                    <p:selectOneMenu id="docStructPositionSelection"
+                                     value="#{MetadataProcessor.positionOfNewDocStrucElement}"
+                                     style="width: 180px;">
+                        <!--TODO check addable types-->
+                        <f:selectItems value="#{MetadataProcessor.positionsOfNewDocStrucElement}"
+                                       var="positionSelection"
+                                       itemValue="#{positionSelection}"
+                                       itemLabel="#{positionSelection.label}"/>
+                        <p:ajax update="docStructAddTypeSelection"/>
+                    </p:selectOneMenu>
 
-                <h:outputLabel value="#{msgs.typ}:" for="docStructAddTypeSelection"/>
-                <p:selectOneMenu id="docStructAddTypeSelection" value="#{MetadataProcessor.tempTyp}" style="width: 180px">
-                    <!--TODO check addable types-->
-                    <f:selectItems value="#{MetadataProcessor.addableDocStructTypes}"/>
-                    <p:ajax update="selectAddableMetadataTypes"/>
-                </p:selectOneMenu>
-            </h:panelGrid>
+                    <h:outputLabel value="#{msgs.typ}:"
+                                   for="docStructAddTypeSelection"/>
+                    <p:selectOneMenu id="docStructAddTypeSelection"
+                                     value="#{MetadataProcessor.tempTyp}"
+                                     style="width: 180px;">
+                        <!--TODO check addable types-->
+                        <f:selectItems value="#{MetadataProcessor.addableDocStructTypes}"/>
+                        <p:ajax update="selectAddableMetadataTypes"/>
+                    </p:selectOneMenu>
+                </h:panelGrid>
 
-            <br/>
+                <br/>
 
-            <h:panelGrid columns="2" columnClasses="top,top">
-                <h:outputText value="#{msgs.defaults}:"/>
+                <h:panelGrid columns="2" columnClasses="top,top">
+                    <h:outputText value="#{msgs.defaults}:"/>
 
-                <h:panelGroup>
-                    <p:selectOneRadio layout="grid" columns="1" value="#{MetadataProcessor.addServeralStructuralElementsMode}">
-                        <f:selectItem itemLabel="#{msgs.pageAllocation}" itemValue="#{false}" />
-                        <f:selectItem itemLabel="#{msgs.metadata}" itemValue="#{true}" />
-                        <p:ajax event="click" update="AddDocStrucTypeSpecs" />
-                    </p:selectOneRadio>
-                </h:panelGroup>
-            </h:panelGrid>
+                    <h:panelGroup>
+                        <p:selectOneRadio layout="grid" columns="1" value="#{MetadataProcessor.addServeralStructuralElementsMode}">
+                            <f:selectItem itemLabel="#{msgs.pageAllocation}" itemValue="#{false}" />
+                            <f:selectItem itemLabel="#{msgs.metadata}" itemValue="#{true}" />
+                            <p:ajax event="click" update="AddDocStrucTypeSpecs" />
+                        </p:selectOneRadio>
+                    </h:panelGroup>
+                </h:panelGrid>
 
-            <h:panelGrid id="AddDocStrucTypeSpecs" columns="1">
-                <h:panelGroup rendered="#{!MetadataProcessor.addServeralStructuralElementsMode}">
-                    <p:panelGrid columns="2">
-                        <p:row>
-                            <h:outputText value="#{msgs.firstPage}:"/>
-                            <p:selectOneMenu id="selectFirstPageOnAddNode" value="#{MetadataProcessor.pagesStart}"
-                                             filter="true" filterMatchMode="startsWith">
-                                <f:selectItem itemLabel="#{msgs.firstPage}" itemValue="" />
-                                <f:selectItems value="#{MetadataProcessor.allPages}"/>
-                            </p:selectOneMenu>
-                        </p:row>
+                <h:panelGrid id="AddDocStrucTypeSpecs" columns="1">
+                    <h:panelGroup rendered="#{!MetadataProcessor.addServeralStructuralElementsMode}">
+                        <p:panelGrid columns="2">
+                            <p:row>
+                                <h:outputText value="#{msgs.firstPage}:"/>
+                                <p:selectOneMenu id="selectFirstPageOnAddNode" value="#{MetadataProcessor.pagesStart}"
+                                                 filter="true" filterMatchMode="startsWith">
+                                    <f:selectItem itemLabel="#{msgs.firstPage}" itemValue="" />
+                                    <f:selectItems value="#{MetadataProcessor.allPages}"/>
+                                </p:selectOneMenu>
+                            </p:row>
 
-                        <p:row>
-                            <h:outputText value="#{msgs.lastPage}:"/>
-                            <p:selectOneMenu id="selectLastPageOnAddNode" value="#{MetadataProcessor.pagesEnd}"
-                                             filter="true" filterMatchMode="startsWith">
-                                <f:selectItem itemLabel="#{msgs.lastPage}" itemValue="" />
-                                <f:selectItems value="#{MetadataProcessor.allPages}"/>
-                            </p:selectOneMenu>
-                        </p:row>
+                            <p:row>
+                                <h:outputText value="#{msgs.lastPage}:"/>
+                                <p:selectOneMenu id="selectLastPageOnAddNode" value="#{MetadataProcessor.pagesEnd}"
+                                                 filter="true" filterMatchMode="startsWith">
+                                    <f:selectItem itemLabel="#{msgs.lastPage}" itemValue="" />
+                                    <f:selectItems value="#{MetadataProcessor.allPages}"/>
+                                </p:selectOneMenu>
+                            </p:row>
+                        </p:panelGrid>
 
-                        <p:row>
-                            <p:commandButton id="addSingleDocStrucSubmitBtn" value="#{msgs.apply}"
+                        <h:panelGroup layout="block">
+                            <p:commandButton id="addSingleDocStrucSubmitBtn"
+                                             value="#{msgs.apply}"
                                              action="#{MetadataProcessor.addSingleNodeWithPages}"
-                                             update="structureTreeForm,structureTreeForm:structureWrapperPanel,structureTreeForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel"
+                                             styleClass="primary right"
+                                             icon="fa fa-check fa-lg"
+                                             iconPos="right"
+                                             update="structureTreeForm,structureTreeForm:structureWrapperPanel,paginationForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel"
                                              oncomplete="PF('dialogAddDocStrucType').hide();"/>
-                        </p:row>
-                    </p:panelGrid>
-                </h:panelGroup>
+                            <p:commandButton value="#{msgs.cancel}"
+                                             icon="fa fa-times fa-lg"
+                                             iconPos="secondary"
+                                             styleClass="secondary right"
+                                             onclick="PF('dialogAddDocStrucType').hide();"/>
+                        </h:panelGroup>
+                    </h:panelGroup>
 
-                <h:panelGroup rendered="#{MetadataProcessor.addServeralStructuralElementsMode}">
-                    <h:panelGrid columns="2">
-                        <h:outputLabel value="#{msgs.count}:" for="elementsToAddSpinner"/>
-                        <p:spinner value="#{MetadataProcessor.metadataElementsToAdd}" id="elementsToAddSpinner" size="5" min="1"/>
+                    <h:panelGroup rendered="#{MetadataProcessor.addServeralStructuralElementsMode}">
+                        <h:panelGrid columns="2">
+                            <h:outputLabel value="#{msgs.count}:" for="elementsToAddSpinner"/>
+                            <p:spinner value="#{MetadataProcessor.metadataElementsToAdd}" id="elementsToAddSpinner" size="5" min="1"/>
 
-                        <h:outputLabel value="#{msgs.typ}:" for="selectAddableMetadataTypes" />
-                        <p:selectOneMenu id="selectAddableMetadataTypes" value="#{MetadataProcessor.addMetaDataType}" style="width: 180px">
-                            <f:selectItems value="#{MetadataProcessor.addableMetadataTypesFromTempType}" />
-                        </p:selectOneMenu>
+                            <h:outputLabel value="#{msgs.typ}:" for="selectAddableMetadataTypes" />
+                            <p:selectOneMenu id="selectAddableMetadataTypes" value="#{MetadataProcessor.addMetaDataType}" style="width: 180px;">
+                                <f:selectItems value="#{MetadataProcessor.addableMetadataTypesFromTempType}" />
+                            </p:selectOneMenu>
 
-                        <h:outputLabel value="#{msgs.value}:" for="inputMetaDataValue"/>
-                        <h:inputTextarea id="inputMetaDataValue" value="#{MetadataProcessor.addMetaDataValue}"/>
-
-                        <p:commandButton id="addMultiDocStrucSubmitBtn" value="#{msgs.apply}"
-                                         action="#{MetadataProcessor.addSeveralNodesWithMetadata}"
-                                         update="structureTreeForm" oncomplete="PF('dialogAddDocStrucType').hide();"/>
-                    </h:panelGrid>
-                </h:panelGroup>
-            </h:panelGrid>
+                            <h:outputLabel value="#{msgs.value}:" for="inputMetaDataValue"/>
+                            <h:inputTextarea id="inputMetaDataValue" value="#{MetadataProcessor.addMetaDataValue}"/>
+                        </h:panelGrid>
+                        <h:panelGroup layout="block">
+                            <p:commandButton id="addMultiDocStrucSubmitBtn"
+                                             value="#{msgs.apply}"
+                                             action="#{MetadataProcessor.addSeveralNodesWithMetadata}"
+                                             update="structureTreeForm"
+                                             icon="fa fa-check fa-lg"
+                                             iconPos="right"
+                                             styleClass="primary right"
+                                             oncomplete="PF('dialogAddDocStrucType').hide();"/>
+                            <p:commandButton value="#{msgs.cancel}"
+                                             icon="fa fa-times fa-lg"
+                                             iconPos="secondary"
+                                             styleClass="secondary right"
+                                             onclick="PF('dialogAddDocStrucType').hide();"/>
+                        </h:panelGroup>
+                    </h:panelGroup>
+                </h:panelGrid>
+            </h:panelGroup>
         </h:form>
     </p:dialog>
 
