--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/structure.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/structure.xhtml
@@ -25,9 +25,9 @@
                 selection="#{MetadataProcessor.selectedTreeNode}"
                 draggable="true" droppable="true" dragdropScope="DocStructTree">
             <p:ajax event="select" listener="#{MetadataProcessor.onNodeSelect}"
-                    update="structureTreeForm:structureWrapperPanel,structureTreeForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel,dialogEditPages"/>
+                    update="structureTreeForm:structureWrapperPanel,paginationForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel,dialogEditPages"/>
             <p:ajax event="dragdrop" listener="#{MetadataProcessor.onNodeDragDrop}"
-                    update="structureTreeForm:structureWrapperPanel,structureTreeForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel,dialogEditPages"/>
+                    update="structureTreeForm:structureWrapperPanel,paginationForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel,dialogEditPages"/>
             <p:treeNode expandedIcon="ui-icon-document" collapsedIcon="ui-icon-document">
                 <ui:param name="elementType" value="#{element.type.getNameByLanguage(LanguageForm.locale)}"/>
                 <h:outputText value="#{elementType}"/> <h:outputText
