--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml
@@ -27,35 +27,41 @@
             <p:panelGrid columns="1" layout="grid">
                 <p:row>
                     <h3>#{empty ProcessForm.property.title ? msgs.propertyAdd : msgs.propertyEdit}</h3>
-                    <div>
-                        <!-- title -->
-                        <p:outputLabel for="propertyTitle"
-                                       value="#{msgs.title}" />
-                        <p:inputText id="propertyTitle"
-                                     value="#{ProcessForm.property.title}"
-                                     placeholder="#{msgs.title}"
-                                     required="#{not empty param['propertyForm:save']}"
-                                     styleClass="input editDialog"/>
-                    </div>
-                    <div>
-                        <!-- value: text -->
-                        <p:outputLabel for="propertyValue" value="#{msgs.value}" />
-                        <p:inputText id="propertyValue" value="#{ProcessForm.property.value}" styleClass="input editDialog"/>
-                    </div>
-                    <p:commandButton action="#{ProcessForm.saveCurrentProperty}"
-                                     id="save"
-                                     update="editForm"
-                                     oncomplete="PF('editPropertyDialog').hide();toggleSave()"
-                                     value="#{msgs.apply}"
-                                     icon="fa fa-check fa-lg"
-                                     iconPos="right"
-                                     styleClass="primary right"/>
-                    <p:commandButton id="cancel"
-                                     onclick="PF('editPropertyDialog').hide();"
-                                     value="#{msgs.cancel}"
-                                     icon="fa fa-times fa-lg"
-                                     iconPos="right"
-                                     styleClass="secondary right"/>
+                    <h:panelGroup layout="block"
+                                  styleClass="dialogFieldWrapper">
+                        <div>
+                            <!-- title -->
+                            <p:outputLabel for="propertyTitle"
+                                           value="#{msgs.title}" />
+                            <p:inputText id="propertyTitle"
+                                         value="#{ProcessForm.property.title}"
+                                         placeholder="#{msgs.title}"
+                                         required="#{not empty param['propertyForm:save']}"
+                                         styleClass="input editDialog"/>
+                        </div>
+                        <div>
+                            <!-- value: text -->
+                            <p:outputLabel for="propertyValue" value="#{msgs.value}" />
+                            <p:inputText id="propertyValue" value="#{ProcessForm.property.value}" styleClass="input editDialog"/>
+                        </div>
+                    </h:panelGroup>
+                    <h:panelGroup layout="block"
+                                  styleClass="dialogButtonWrapper">
+                        <p:commandButton action="#{ProcessForm.saveCurrentProperty}"
+                                         id="save"
+                                         update="editForm"
+                                         oncomplete="PF('editPropertyDialog').hide();toggleSave()"
+                                         value="#{msgs.apply}"
+                                         icon="fa fa-check fa-lg"
+                                         iconPos="right"
+                                         styleClass="primary right"/>
+                        <p:commandButton id="cancel"
+                                         onclick="PF('editPropertyDialog').hide();"
+                                         value="#{msgs.cancel}"
+                                         icon="fa fa-times fa-lg"
+                                         iconPos="right"
+                                         styleClass="secondary right"/>
+                    </h:panelGroup>
                 </p:row>
             </p:panelGrid>
         </h:form>
