--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditMetsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditMetsPopup.xhtml
@@ -20,120 +20,129 @@
     <h:body>
         <!-- edit dialog -->
         <p:dialog widgetVar="editFolderDialog"
-                  header="#{empty ProjectForm.myFolder.path ? msgs['editFolderDialog.caption.add'] : msgs['editFolderDialog.caption.edit']}"
                   width="700px"
                   modal="true"
                   dynamic="true"
+                  resizable="false"
+                  showHeader="false"
                   styleClass="editDialog">
             <h:form>
-                <p:panelGrid style="width:100%">
-                    <p:row>
-                        <p:column colspan="2">
-                            <p:outputLabel for="path" value="#{msgs['editFolderDialog.path']}"/>
-                            <p:inputText id="path" value="#{ProjectForm.myFolder.path}" styleClass="input editDialog"/>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column colspan="2">
-                            <p:outputLabel for="mimeType" value="#{msgs['editFolderDialog.mimeType']}"/>
-                            <p:selectOneMenu id="mimeType" value="#{ProjectForm.myFolder.mimeType}"
-                                             styleClass="input editDialog">
-                                <f:selectItems value="#{ProjectForm.mimeTypes}"/>
-                            </p:selectOneMenu>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column colspan="2">
-                            <p:outputLabel for="createFolder" value="#{msgs['editFolderDialog.createFolder']}"/>
-                            <p:selectBooleanCheckbox id="createFolder" styleClass="switch input"
-                                                     value="#{ProjectForm.myFolder.createFolder}">
-                                <p:ajax event="change" oncomplete="toggleSave()"/>
-                            </p:selectBooleanCheckbox>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column>
-                            <p:outputLabel for="generator" value="#{msgs['editFolderDialog.generator']}"/>
-                            <p:selectOneMenu id="generator" value="#{ProjectForm.myFolder.generator.method}">
-                                <f:selectItem itemLabel="" itemValue=""/>
-                                <f:selectItem itemLabel="#{msgs['editFolderDialog.generator.dpi']}"
-                                              itemValue="changeDpi"/>
-                                <f:selectItem itemLabel="#{msgs['editFolderDialog.generator.derivative']}"
-                                              itemValue="createDerivative"/>
-                                <f:selectItem itemLabel="#{msgs['editFolderDialog.generator.imageScale']}"
-                                              itemValue="getScaledWebImage"/>
-                                <f:selectItem itemLabel="#{msgs['editFolderDialog.generator.imageSize']}"
-                                              itemValue="getSizedWebImage"/>
-                                <p:ajax process="@form" update="@form"/>
-                            </p:selectOneMenu>
-                        </p:column>
-                        <p:column>
-                            <p:outputLabel for="dpi" value="#{msgs['editFolderDialog.dpi']}"
-                                           rendered="#{ProjectForm.myFolder.generator.method == 'changeDpi'}"/>
-                            <p:outputLabel for="factor" value="#{msgs['editFolderDialog.derivative']}"
-                                           rendered="#{ProjectForm.myFolder.generator.method == 'createDerivative'}"/>
-                            <p:outputLabel for="factor" value="#{msgs['editFolderDialog.imageScale']}"
-                                           rendered="#{ProjectForm.myFolder.generator.method =='getScaledWebImage'}"/>
-                            <p:outputLabel for="width" value="#{msgs['editFolderDialog.imageSize']}"
-                                           rendered="#{ProjectForm.myFolder.generator.method == 'getSizedWebImage'}"/>
-                            <p:inputNumber id="dpi" value="#{ProjectForm.myFolder.generator.dpi}" decimalPlaces="0"
-                                           symbol=" DPI" symbolPosition="s"
-                                           rendered="#{ProjectForm.myFolder.generator.method == 'changeDpi'}"
-                                           styleClass="input editDialog"/>
-                            <p:inputNumber id="factor" value="#{ProjectForm.myFolder.generator.factor}"
-                                           decimalPlaces="1" symbol="%" symbolPosition="s"
-                                           rendered="#{ProjectForm.myFolder.generator.method == 'createDerivative' or ProjectForm.myFolder.generator.method == 'getScaledWebImage'}"
-                                           styleClass="input editDialog"/>
-                            <p:inputNumber id="width" value="#{ProjectForm.myFolder.generator.width}" decimalPlaces="0"
-                                           symbol=" px" symbolPosition="s"
-                                           rendered="#{ProjectForm.myFolder.generator.method == 'getSizedWebImage'}"
-                                           styleClass="input editDialog"/>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column style="width:50%">
-                            <p:outputLabel for="linkingMode" value="#{msgs['editFolderDialog.linkingMode']}"/>
-                            <p:selectOneMenu id="linkingMode" value="#{ProjectForm.myFolder.linkingMode}">
-                                <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.ALL']}" itemValue="ALL"/>
-                                <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.EXISTING']}"
-                                              itemValue="EXISTING"/>
-                                <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.NO']}" itemValue="NO"/>
-                                <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.PREVIEW_IMAGE']}"
-                                              itemValue="PREVIEW_IMAGE"/>
-                            </p:selectOneMenu>
-                        </p:column>
-                        <p:column style="width:50%">
-                            <p:outputLabel for="fileGroup" value="#{msgs['editFolderDialog.fileGroup']}"/>
-                            <p:selectOneMenu id="fileGroup" value="#{ProjectForm.myFolder.fileGroup}" effect="fold"
-                                             editable="true">
-                                <f:selectItems value="#{ProjectForm.myFolder.fileGroups}"/>
-                            </p:selectOneMenu>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column colspan="2">
-                            <p:outputLabel for="urlStructure" value="#{msgs['editFolderDialog.urlStructure']}"/>
-                            <p:inputText id="urlStructure" value="#{ProjectForm.myFolder.urlStructure}"
-                                         styleClass="input editDialog"/>
-                        </p:column>
-                    </p:row>
-                    <p:row>
-                        <p:column>
-                            <p:outputLabel for="copyFolder" value="#{msgs['editFolderDialog.copyFolder']}"/>
-                            <p:selectBooleanCheckbox id="copyFolder" styleClass="switch input"
-                                                     value="#{ProjectForm.myFolder.copyFolder}">
-                                <p:ajax event="change" oncomplete="toggleSave()"/>
-                            </p:selectBooleanCheckbox>
-                        </p:column>
-                    </p:row>
-                </p:panelGrid>
-                <p:commandButton action="#{ProjectForm.saveFolder()}"
-                                 update="editForm"
-                                 oncomplete="PF('editFolderDialog').hide();toggleSave()"
-                                 value="#{msgs.apply}"
-                                 styleClass="right"/>
-                <p:commandButton value="#{msgs.cancel}"
-                                 onclick="PF('editFolderDialog').hide()"/>
+                <h3>#{empty ProjectForm.myFolder.path ? msgs['editFolderDialog.caption.add'] : msgs['editFolderDialog.caption.edit']}</h3>
+                <h:panelGroup layout="block"
+                              styleClass="dialogFieldWrapper">
+                    <p:panelGrid style="width:100%;">
+                        <p:row>
+                            <p:column colspan="2">
+                                <p:outputLabel for="path" value="#{msgs['editFolderDialog.path']}"/>
+                                <p:inputText id="path" value="#{ProjectForm.myFolder.path}" styleClass="input editDialog"/>
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column colspan="2">
+                                <p:outputLabel for="mimeType" value="#{msgs['editFolderDialog.mimeType']}"/>
+                                <p:selectOneMenu id="mimeType" value="#{ProjectForm.myFolder.mimeType}"
+                                                 styleClass="input editDialog">
+                                    <f:selectItems value="#{ProjectForm.mimeTypes}"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column colspan="2">
+                                <p:outputLabel for="createFolder" value="#{msgs['editFolderDialog.createFolder']}"/>
+                                <p:selectBooleanCheckbox id="createFolder" styleClass="switch input"
+                                                         value="#{ProjectForm.myFolder.createFolder}">
+                                    <p:ajax event="change" oncomplete="toggleSave()"/>
+                                </p:selectBooleanCheckbox>
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="generator" value="#{msgs['editFolderDialog.generator']}"/>
+                                <p:selectOneMenu id="generator" value="#{ProjectForm.myFolder.generator.method}">
+                                    <f:selectItem itemLabel="" itemValue=""/>
+                                    <f:selectItem itemLabel="#{msgs['editFolderDialog.generator.dpi']}"
+                                                  itemValue="changeDpi"/>
+                                    <f:selectItem itemLabel="#{msgs['editFolderDialog.generator.derivative']}"
+                                                  itemValue="createDerivative"/>
+                                    <f:selectItem itemLabel="#{msgs['editFolderDialog.generator.imageScale']}"
+                                                  itemValue="getScaledWebImage"/>
+                                    <f:selectItem itemLabel="#{msgs['editFolderDialog.generator.imageSize']}"
+                                                  itemValue="getSizedWebImage"/>
+                                    <p:ajax process="@form" update="@form"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                            <p:column>
+                                <p:outputLabel for="dpi" value="#{msgs['editFolderDialog.dpi']}"
+                                               rendered="#{ProjectForm.myFolder.generator.method == 'changeDpi'}"/>
+                                <p:outputLabel for="factor" value="#{msgs['editFolderDialog.derivative']}"
+                                               rendered="#{ProjectForm.myFolder.generator.method == 'createDerivative'}"/>
+                                <p:outputLabel for="factor" value="#{msgs['editFolderDialog.imageScale']}"
+                                               rendered="#{ProjectForm.myFolder.generator.method =='getScaledWebImage'}"/>
+                                <p:outputLabel for="width" value="#{msgs['editFolderDialog.imageSize']}"
+                                               rendered="#{ProjectForm.myFolder.generator.method == 'getSizedWebImage'}"/>
+                                <p:inputNumber id="dpi" value="#{ProjectForm.myFolder.generator.dpi}" decimalPlaces="0"
+                                               symbol=" DPI" symbolPosition="s"
+                                               rendered="#{ProjectForm.myFolder.generator.method == 'changeDpi'}"
+                                               styleClass="input editDialog"/>
+                                <p:inputNumber id="factor" value="#{ProjectForm.myFolder.generator.factor}"
+                                               decimalPlaces="1" symbol="%" symbolPosition="s"
+                                               rendered="#{ProjectForm.myFolder.generator.method == 'createDerivative' or ProjectForm.myFolder.generator.method == 'getScaledWebImage'}"
+                                               styleClass="input editDialog"/>
+                                <p:inputNumber id="width" value="#{ProjectForm.myFolder.generator.width}" decimalPlaces="0"
+                                               symbol=" px" symbolPosition="s"
+                                               rendered="#{ProjectForm.myFolder.generator.method == 'getSizedWebImage'}"
+                                               styleClass="input editDialog"/>
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column style="width:50%">
+                                <p:outputLabel for="linkingMode" value="#{msgs['editFolderDialog.linkingMode']}"/>
+                                <p:selectOneMenu id="linkingMode" value="#{ProjectForm.myFolder.linkingMode}">
+                                    <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.ALL']}" itemValue="ALL"/>
+                                    <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.EXISTING']}"
+                                                  itemValue="EXISTING"/>
+                                    <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.NO']}" itemValue="NO"/>
+                                    <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.PREVIEW_IMAGE']}"
+                                                  itemValue="PREVIEW_IMAGE"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                            <p:column style="width:50%">
+                                <p:outputLabel for="fileGroup" value="#{msgs['editFolderDialog.fileGroup']}"/>
+                                <p:selectOneMenu id="fileGroup" value="#{ProjectForm.myFolder.fileGroup}" effect="fold"
+                                                 editable="true">
+                                    <f:selectItems value="#{ProjectForm.myFolder.fileGroups}"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column colspan="2">
+                                <p:outputLabel for="urlStructure" value="#{msgs['editFolderDialog.urlStructure']}"/>
+                                <p:inputText id="urlStructure" value="#{ProjectForm.myFolder.urlStructure}"
+                                             styleClass="input editDialog"/>
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="copyFolder" value="#{msgs['editFolderDialog.copyFolder']}"/>
+                                <p:selectBooleanCheckbox id="copyFolder" styleClass="switch input"
+                                                         value="#{ProjectForm.myFolder.copyFolder}">
+                                    <p:ajax event="change" oncomplete="toggleSave()"/>
+                                </p:selectBooleanCheckbox>
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
+                </h:panelGroup>
+                <h:panelGroup layout="block"
+                              styleClass="dialogButtonWrapper">
+                    <p:commandButton action="#{ProjectForm.saveFolder()}"
+                                     update="editForm"
+                                     oncomplete="PF('editFolderDialog').hide();toggleSave()"
+                                     value="#{msgs.apply}"
+                                     styleClass="primary right"/>
+                    <p:commandButton value="#{msgs.cancel}"
+                                     styleClass="secondary right"
+                                     onclick="PF('editFolderDialog').hide()"/>
+                </h:panelGroup>
             </h:form>
         </p:dialog>
     </h:body>
