--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addProjectsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addProjectsPopup.xhtml
@@ -21,11 +21,14 @@
         <!-- edit dialog -->
         <p:dialog widgetVar="addProjectDialog"
                   id="addProjectDialog"
-                  header="#{msgs.addProjects}"
+                  header=""
                   width="700px"
                   modal="true"
+                  resizable="false"
+                  showHeader="false"
                   dynamic="true">
             <h:form id="userProjectForm">
+                <h3>#{msgs.addProjects}</h3>
                 <p:dataTable var="item"
                              id="selectProjectTable"
                              value="#{UserForm.projects}"
@@ -36,17 +39,27 @@
                     <p:column headerText="#{msgs.projectList}">
                         <h:outputText value="#{item.title}"/>
                     </p:column>
-                    <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
+                    <p:column headerText="#{msgs.actions}"
+                              styleClass="actionsColumn">
                         <p:commandLink id="addUserProject"
                                        action="#{UserForm.addToProject}"
                                        title="add to project"
-                                       update="editForm:userTabView:projectDatatable"
+                                       update="editForm:userTabView:projectDatatable userProjectForm:selectProjectTable"
                                        oncomplete="toggleSave()">
                             <i class="fa fa-user-plus fa-lg"/>
                             <f:param name="ID" value="#{item.id}"/>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
+                <h:panelGroup layout="block"
+                              styleClass="dialogButtonWrapper">
+                    <p:commandButton id="close"
+                                     onclick="PF('addProjectDialog').hide();"
+                                     value="#{msgs.close}"
+                                     icon="fa fa-times fa-lg"
+                                     iconPos="right"
+                                     styleClass="secondary right"/>
+                </h:panelGroup>
             </h:form>
         </p:dialog>
     </h:body>
