--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addRolesPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addRolesPopup.xhtml
@@ -21,11 +21,13 @@
         <!-- edit dialog -->
         <p:dialog widgetVar="addRoleDialog"
                   id="addRoleDialog"
-                  header="#{msgs.rolesAdd}"
                   width="700px"
                   modal="true"
+                  resizable="false"
+                  showHeader="false"
                   dynamic="true">
             <h:form id="roleForm">
+                <h3>#{msgs.rolesAdd}</h3>
                 <p:dataTable var="item"
                              id="selectRoleTable"
                              value="#{UserForm.roles}"
@@ -39,17 +41,27 @@
                     <p:column headerText="#{msgs.client}">
                         <h:outputText value="#{item.client.name}"/>
                     </p:column>
-                    <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
+                    <p:column headerText="#{msgs.actions}"
+                              styleClass="actionsColumn">
                         <p:commandLink id="addRole"
                                        action="#{UserForm.addToRole}"
                                        title="add to user group"
-                                       update="editForm:userTabView:roleDatatable"
+                                       update="editForm:userTabView:roleDatatable roleForm:selectRoleTable"
                                        oncomplete="toggleSave()">
                             <i class="fa fa-user-plus fa-lg"/>
                             <f:param name="ID" value="#{item.id}"/>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
+                <h:panelGroup layout="block"
+                              styleClass="dialogButtonWrapper">
+                    <p:commandButton id="close"
+                                     onclick="PF('addRoleDialog').hide();"
+                                     value="#{msgs.close}"
+                                     icon="fa fa-times fa-lg"
+                                     iconPos="right"
+                                     styleClass="secondary right"/>
+                </h:panelGroup>
             </h:form>
         </p:dialog>
     </h:body>
