--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/resetPasswordPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/resetPasswordPopup.xhtml
@@ -18,40 +18,62 @@
         <!-- edit dialog -->
         <p:dialog widgetVar="resetPasswordDialog"
                   id="resetPasswordDialog"
-                  header="#{msgs.passwordReset}"
                   width="400px"
                   modal="true"
+                  resizable="false"
+                  showHeader="false"
                   dynamic="true">
+            <h3>#{msgs.passwordReset}</h3>
             <h:form id="resetPasswordForm">
                 <p:panelGrid id="passwordGrid" columns="1" layout="grid">
                     <p:row>
-                        <div>
-                            <!-- new password -->
-                            <h:outputLabel for="newPassword" value="#{msgs.newPassword}"/>
-                            <p:password redisplay="true" id="newPassword" class="password"
-                                        value="#{UserForm.passwordToEncrypt}" label="#{msgs.newPassword}"
-                                        match="newPasswordRepeat" required="true"
-                                        validatorMessage="#{msgs.passwordsDontMatch}"/>
-                        </div>
+                        <h:panelGroup layout="block"
+                                      styleClass="dialogFieldWrapper">
+                            <div>
+                                <!-- new password -->
+                                <p:outputLabel for="newPassword"
+                                               value="#{msgs.newPassword}"/>
+                                <p:password redisplay="true"
+                                            id="newPassword"
+                                            class="password"
+                                            value="#{UserForm.passwordToEncrypt}"
+                                            label="#{msgs.newPassword}"
+                                            match="newPasswordRepeat"
+                                            required="#{not empty param['resetPasswordForm:save']}"
+                                            validatorMessage="#{msgs.passwordsDontMatch}"/>
+                            </div>
 
-                        <div>
-                            <!-- repeat new password -->
-                            <h:outputLabel for="newPasswordRepeat" value="#{msgs.confirmNewPassword}"/>
-                            <p:password redisplay="true" id="newPasswordRepeat" class="password"
-                                        value="#{UserForm.passwordToEncrypt}" label="#{msgs.confirmNewPassword}"
-                                        required="true"/>
-                        </div>
-                        <div>
+                            <div>
+                                <!-- repeat new password -->
+                                <h:outputLabel for="newPasswordRepeat"
+                                               value="#{msgs.confirmNewPassword}"/>
+                                <p:password redisplay="true"
+                                            id="newPasswordRepeat"
+                                            class="password"
+                                            value="#{UserForm.passwordToEncrypt}"
+                                            label="#{msgs.confirmNewPassword}"
+                                            required="#{not empty param['resetPasswordForm:save']}"/>
+                            </div>
+                        </h:panelGroup>
+
+                        <h:panelGroup layout="block"
+                                      styleClass="dialogButtonWrapper">
                             <p:commandButton id="save"
                                              value="#{msgs.save}"
                                              action="#{UserForm.changePasswordForCurrentUser}"
                                              icon="fa fa-floppy-o fa-lg"
                                              iconPos="right"
                                              validateClient="true"
-                                             styleClass="button-filled-blue"
-                                             oncomplete="PF('resetPasswordDialog').hide();">
-                            </p:commandButton>
-                        </div>
+                                             styleClass="primary right"
+                                             oncomplete="PF('resetPasswordDialog').hide();"/>
+                            <p:commandButton id="cancel"
+                                             value="#{msgs.cancel}"
+                                             icon="fa fa-times fa-lg"
+                                             iconPos="right"
+                                             immediate="true"
+                                             styleClass="secondary right"
+                                             onclick="PF('resetPasswordDialog').hide();"/>
+                        </h:panelGroup>
                     </p:row>
                 </p:panelGrid>
             </h:form>
